--- a/_quarto-tuto.yml
+++ b/_quarto-tuto.yml
@@ -3,7 +3,7 @@ project:
   render: 
     - "*.qmd"
     - "!Exercises/"
-    - "!exemples-correction/"
+    - "!examples-correction/"
 
 website:
   repo-url: https://github.com/cderv/tuto-quarto-user-2024
